Fix: Ajustado a logica de algumas partes do sistema